# Theta-Game

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  app.h  cmake_install.cmake  main.cpp  main.cpp~  tak.txt  test.txt  test.txt~  urrro.txt  yourmom.txt
Engine/: Chunk.cpp  PhysicalObject.cpp  RTG.cpp  TextureMenager.cpp  TextureMenager.cpp~  filesys.cpp
Engine/headers/: #Chunk.h#  Block.h  Chunk.h  Physical_Object.h  Physical_Object.h~  Player.h  Player.h~  RTG.h  RTG.h~  Structure.h  Structure.h~  Texture_Menager.h  Texture_Menager.h~  filesys.h  filesys.h~
